test/tasty/pos/src-2/tastytest/TestDelayedInternalEmpty.scala
package tastytest


object TestDelayedInternalEmpty {

  compiletimeHasChild[DelayedInternalEmpty[_]]("tastytest.DelayedInternalEmpty.Internal.Empty")

}
