test/tasty/neg/src-2/TestCompiletimeQuoteType_fail.scala
package tastytest

object TestCompiletimeQuoteType {
  def test = CompiletimeQuoteType.f[Int]
}
